--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,19 +7,19 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Will Rynearson
+    tagline: Sustainable Development Goals
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    github: sharu725
+    # email: email@gmail.com
+    # phone: 012 345 6789
+    website: wrynearson.github.io #do not add http://
+    linkedin: willrynearson
+    github: wrynearson
     gitlab:
     bitbucket:
-    twitter: '@webjeda'
+    twitter: '@willrynearson'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
@@ -28,20 +28,17 @@ sidebar:
       - idiom: English
         level: Native
 
-      - idiom: French
-        level: Professional
-
-      - idiom: Spanish
-        level: Professional
+      - idiom: Chinese
+        level: Intermediate
 
     interests:
-      - item: Climbing
+      - item: Photography
         link:
 
-      - item: Snowboarding
+      - item: Running
         link:
 
-      - item: Cooking
+      - item: Travel
         link:
 
 career-profile:
