--- a/_data/data.yml
+++ b/_data/data.yml
@@ -65,25 +65,25 @@ education:
         pretium quis, sem.
     - degree: Bachelor of Science
         Mechanical Engineering
-      university: 🇸 Montana State University
+      university: 🇺🇲 Montana State University
       time: 2011-2015
     - degree: Certificate
         Mandarin Chinese
-      university: 🇨🇳  Shanghai Ocean University 上海海洋大学
+      university: 🇨🇳 Shanghai Ocean University 上海海洋大学
       time: 2016 - 2017
       details: 
         One year, full time intensive Chinese (Mandarin) language course.
     - degree: Summer Program [Exchange]
         
         Cultural Exchange, International and Intercultural Communication
-      university: 🇨🇳  Lanzhou University 兰州大学
+      university: 🇨🇳 Lanzhou University 兰州大学
       time: Summer 2015
       details: 
         A month long exchange program focusing on Chinese language (Mandarin), art and cultural history, and China's modern economy.
     - degree: Certificate of Proficiency [Exchange]
         
         Mechanical Engineering
-      university: 🇿 University of Canterbury
+      university: 🇳🇿 University of Canterbury
       time: 2013 - 2014
       details: 
         International student for one year. Mechanical Engineering, Chemical Engineering, and cultural studies courses.
