--- a/_data/data.yml
+++ b/_data/data.yml
@@ -95,7 +95,7 @@ education:
 experiences:
     - role: Research Associate
       time: 2020 - 2021
-      company: [Resurgence](https://www.resurgence.io/) | London, UK
+      company: Resurgence | London, UK
       details: |
         Lead researching and writing content for the Open Data Infrastructure 
         for Resilience Cities (ODIR) republication, an interactive showcase of how 
