--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: My Resume
-url: 'http://webjeda.com'
+title: Will Rynearson - Resume
+url: 'http://wrynearson.github.io'
 baseurl: '/online-cv' #change it according to your repository name
 description: Will Rynearson's resume
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
